--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Mohan K, VIT</h1>
+    <h1>Hello Mohan K, VIT, Vellore, India</h1>
 </body>
 </html>
